frontapp/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-frontapp
  labels:
    app: springboot-frontapp
spec:
  type: ClusterIP
  selector:
    app: springboot-frontapp
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
