frontapp/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp-nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /springboot-frontapp
            pathType: Prefix
            backend:
              service:
                name: springboot-frontapp
                port:
                  number: 80
